force-app/main/default/objects/Event_Custom_Price__c/Event_Custom_Price__c.object-meta.xml
<CustomObject>
    <label>Event Custom Price</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Custom Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>