force-app/main/default/objects/Event_Custom_Price__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Event Custom Prices</relationshipLabel>
    <relationshipName>Event_Custom_Prices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>