force-app/main/default/objects/Event_Custom_Price__c/fields/Reg_Type__c.field-meta.xml
<CustomField>
    <fullName>Reg_Type__c</fullName>
    <label>Reg Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Govt Attendee</fullName>
            </value>
            <value>
                <fullName>Industry Attendee</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>